compiler/tests/success/x86-64/copy_length_0.jazz
param int N = 0;

export fn main (reg ptr u64[N] a) -> reg ptr u64[N] {
  reg u64[N] r1;
  r1 = #copy(a);
  a = #copy(r1);
  return a;
}
