compiler/tests/fail/param_expansion/operator_global.jazz
param int N = 2;
u64[N&N] a={1,2};
